<resources>
    <string name="app_name">ChoTracker</string>
    <string name="agree_to_terms">By logging in, you agree to our <font color="#0E8388">Terms of service</font> and <font color="#0E8388">Privacy policy</font>.</string>
    <string name="continue_login">Continue Login</string>
    <string name="desc_menu_1">Taking care of your body is a powerful investment in your future self.</string>
    <string name="desc_menu_2">A healthy lifestyle is not a short-term goal, it\'s a lifelong commitment.</string>
    <string name="desc_menu_3">Your body is a temple, keep it pure and clean for the soul to reside in.</string>
    <string name="desc_menu_4">Don\'t wait for illness to strike, make your health a priority today.</string>
    <string name="tagline">Track your cholesterol level through your eyes</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_error">Please input valid email</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="or">OR</string>
    <string name="already_have_account">Already have an account?<font color="#0E8388"> Login.</font></string>
    <string name="do_not_have_account">Don\'t have an account yet?<font color="#0E8388"> Sign Up.</font></string>
    <string name="ads_title">Upgrade to Premium</string>
    <string name="ads_desc">Consult with our professional doctors and get the best price</string>
    <string name="choose_plan">CHOOSE THIS PLAN</string>
    <string name="one">1</string>
    <string name="six">6</string>
    <string name="twelve">12</string>
    <string name="month">MONTH</string>
    <string name="price1">Rp. 50.000</string>
    <string name="price2">Rp. 250.000</string>
    <string name="price3">Rp. 500.000</string>
    <string name="date_template">Agu 17, 1945</string>
    <string name="total_cholesterol">Total Cholesterol :</string>
    <string name="cholesterol_level">Cholesterol Level :</string>
    <string name="rate_cholesterol_template">\> 240</string>
    <string name="rate_cholesterol_level">High</string>

    <string name="error_message">Oops..\nSomething went wrong.</string>
    <string name="close">CLOSE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_profile">Bintang Khadafi</string>
    <string name="email_profile">bintang@gmail.com</string>
    <string name="darkmode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="term_of_service">Term of Service</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_app">About App</string>
    <string name="rate_app">Rate this App</string>
    <string name="logout">Logout</string>
    <string name="seting_profile">Settings</string>

    <string name="home_nave">Home</string>
    <string name="findkes_nav">Findkes</string>
    <string name="chochat_nav">ChoChat</string>
    <string name="profile_nav">Profile</string>
    <string name="click">click</string>

    <string name="edit_detail_profile">Edit Profile</string>
    <string name="button_edit_profile">Change Picture</string>
    <string name="name_detail_profile">Name</string>
    <string name="email_detail_profile">Email</string>
    <string name="birth_detail_profile">Birth of Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="boy">Male</string>
    <string name="girl">Famale</string>
    <string name="button_update">Update</string>

    <string name="date_article">March 12,2023</string>
    <string name="name_article">Ketahui Makanan untuk menjaga kesehatan Tubuhmu</string>
    <string name="description_article">The 16-term lawmaker, often called the conscience of Congress, was a giant of the civil rights movement of the 1960s. Lewis was only 25 when he believed Alabama troopers would kill him on the peaceful march </string>
    <string name="name_article2">Kenali Gejala Stroke Awal
Dengan ChoTracker</string>
    <string name="description_article2">The 16-term lawmaker, often called the conscience of Congress, was a giant of the civil rights movement of the 1960s. Lewis was only 25 when he believed Alabama troopers would kill him on the peaceful march </string>
    <string name="article">Article</string>

    <string name="name_detail_article">Kenali Gejala Stroke Awal
Dengan ChoTracker</string>
    <string name="description_detail_article">The 16-term lawmaker, often called the conscience of Congress, was a giant of the civil rights movement of the 1960s. Lewis was only 25 when he believed Alabama troopers would kill him on the peaceful march for voting rights across the bridge on March 7, 1965, known today as “Bloody Sunday.”

Lewis suffered a fractured skull and was one of dozens of nonviolent protesters who were hospitalized. News coverage of the brutal beatings prompted increased pressure on Congress to pass the 1965 Voting Rights Act, to bar states from enforcing discriminatory laws that had long hindered prospective Black voters.

And though Lewis is possibly best known for his march in Selma, he had already emerged as a leading voice in the fight for equal rights and had been arrested a number of times for the cause by that time.
</string>
    <string name="description_tambahan1">The 16-term lawmaker, often called the conscience of Congress, was a giant of the civil rights movement of the 1960s. Lewis was only 25 when he believed Alabama troopers would kill him on the peaceful march for voting rights across the bridge on March 7, 1965, known today as “Bloody Sunday.”

Lewis suffered a fractured skull and was one of dozens of nonviolent protesters who were hospitalized. News coverage of the brutal beatings prompted increased pressure on Congress to pass the 1965 Voting Rights Act, to bar states from enforcing discriminatory laws that had long hindered prospective Black voters.
</string>
    <string name="other_articles">Other Articles</string>
    <string name="do_you_like">Do you like it?</string>
    <string name="cho_admin">Cho admin</string>
    <string name="date_see_article">5 days ago</string>

    <string name="premium">Upgrade to <font color="#FFD700">PREMIUM</font> now ! </string>
    <string name="be_a_part">and be part of</string>
    <string name="Chotracker">ChoTrack Fighter!</string>
    <string name="History">History</string>
    <string name="see_history">See all history</string>
    <string name="name_komet">Hi,KOMET</string>
    <string name="description_name">Have a great day</string>
    <string name="see_article">See all article</string>


    <string name="consultation">Consultation</string>
    <string name="myChochat">MyCho Bot</string>
    <string name="cho_description">Hi, may i help you?</string>
    <string name="lats_see">12:00 PM</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="choose_doctor">Choose your doctor</string>
    <string name="doctor1">dr. Alif Toriq</string>
    <string name="doctor2">dr. Fadilla Rahim</string>
    <string name="doctor3">dr. Iga Yusdisti</string>
    <string name="premium_card_upgrade">Upgrade to </string>
    <string name="premium_card">Upgrade to
<font color="#FFD700">PREMIUM</font> and
consult with us</string>
    <string name="upgrade_now">upgrade</string>

    <string name="chat_with_expert">Chat with expert</string>
    <string name="choose_a_doctor">Choose your doctor</string>
    <string name="doctor_stepany">Doctor. Stepany</string>
    <string name="doctor_robert">Doctor. Robert</string>
    <string name="description_doctor">General Pulmonologist</string>
    <string name="chat">Chat</string>

    <string name="confirm_password_not_match">Confirm password does not match!</string>
    <string name="make_sure_all_data">Make sure all data has been filled in!</string>
    <string name="signup_success">Sign Up Account Successfully!\nPlease check your email or spam and verify your account.</string>
    <string name="email_has_been_used_error">Email has been used!\nPlease choose another email.</string>
    <string name="wrong_email_password">Login failed!\nPlease make sure your email or password is correct.</string>
    <string name="email_verification_error">Please verify your account first!</string>

    <string name="picker_bottom_message">Tap for photo</string>

    <string name="recent">Recent</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>

    <string name="tap_to_select">Tap to Select</string>
    <string name="images_selected">%s Selected</string>
    <string name="str_ok">OK</string>

    <string name="result">Result</string>
    <string name="save_result">Save Result</string>
    <string name="result_total_cholesterol">100</string>
    <string name="result_cholesterol_level">Normal</string>
    <string name="back">Back</string>
    <string name="detail_title">%1$s\'s aticle</string>

    <string name="no_data">NO DATA</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="save_result_success">Result saved successfully!</string>
    <string name="error_get_token">Internal server error.\nPlease try again later.</string>
    <string name="history">History Result</string>
    <string name="decss">TextView</string>

    <string name="nearby_medical_facility">Fasilitas Kesehatan\ndi Sekitar Anda</string>
    <string name="hospital_name_template">Rumah Sakit Template</string>
    <string name="hospital_location_template">Jl. Gajah Mada</string>
    <string name="update_profile_success">Update Profile Successfully!</string>
    <string name="failed_load_profile">Failed to load profile.</string>

    <string-array name="data_title">
        <item>Ketahui Makanan untuk menjaga kesehatan Tubuhmu</item>
    </string-array>

    <string-array name="data_desc">
        <item>The 16-term lawmaker, often called the conscience of Congress, was a giant of the civil rights movement of the 1960s. Lewis was only 25 when he believed Alabama troopers would kill him on the peaceful march</item>
    </string-array>

    <string name="hint_chochat_typing">Type hello to start..</string>

</resources>