<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"

    tools:context=".ui.chochat.ChoChatLandingPageFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="359dp"
        android:layout_height="244dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_green"
        app:cardCornerRadius="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mycho_bot">

        <ImageView
            android:id="@+id/upgrade"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="298dp"
            android:layout_marginTop="148dp"
            android:src="@drawable/to_page"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/upgrade_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="150dp"
            android:textColor="@color/white"
            android:text="@string/upgrade_now" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="70dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/premium_card" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="157dp"
            android:layout_height="213dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/img_doctor" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="316dp"
        android:text="@string/consultation"
        android:textColor="@color/main_green"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mycho_bot"
        android:layout_width="355dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="19dp"
            android:text="@string/lats_see"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="40dp"
            android:text="@string/cho_description" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="20dp"
            android:text="@string/myChochat"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="71dp"
            android:layout_height="65dp"
            android:layout_margin="13dp"
            android:src="@drawable/mychobot" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>