<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    tools:context=".ui.chochat.ChochatPremiumFragment">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="316dp"
        android:text="@string/consultation"
        android:textColor="@color/main_green"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/doctor1"
        android:layout_width="355dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="9dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_doctor">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="30dp"
            android:text="@string/lats_see" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="30dp"
            android:text="@string/doctor1" />



        <ImageView
            android:id="@+id/imageView25"
            android:layout_margin="15dp"
            android:layout_width="71dp"
            android:layout_height="65dp"
            android:src="@drawable/doctor1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mycho_bot"
        android:layout_width="355dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="19dp"
            android:text="@string/lats_see"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="40dp"
            android:text="@string/cho_description" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="20dp"
            android:text="@string/myChochat"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="71dp"
            android:layout_height="65dp"
            android:layout_margin="13dp"
            android:src="@drawable/mychobot" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/find_doctor"
        android:layout_width="367dp"
        android:layout_height="31dp"
        android:layout_margin="16dp"
        android:layout_marginStart="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mycho_bot">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_doctor"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/see_article"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:text="@string/find_doctor"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/to_page" />


    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="BottomAppBar">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:labelVisibilityMode="labeled"
            app:elevation="0dp"
            app:menu="@menu/bottom_menu" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/capture_nav"
        app:backgroundTint="@color/main_green"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="35dp"
        app:tint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="645dp" />

</androidx.constraintlayout.widget.ConstraintLayout>